--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
 			<version>4.25.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>8.0.1.Final</version>
+		</dependency>
 
 
 		<dependency>
